# Eventide

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  CommandManager.cpp  CommandManager.h  GBufferPipeline.cpp  GBufferPipeline.h  README.md  RayTracingAS.cpp  RayTracingAS.h  RayTracingPipeline.cpp  RayTracingPipeline.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SSRQueryPipeline.cpp  SSRQueryPipeline.h  ShaderUtils.h  Vertex.h  VulkanApp.sln  VulkanApp.vcxproj  VulkanApp.vcxproj.filters  VulkanContext.cpp  VulkanContext.h  VulkanModel.cpp  VulkanModel.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTypes.h  main.cpp
shaders/: closesthit.rchit  frag.spv  gbuffer.frag  gbuffer.vert  miss.rmiss  raygen.rgen  shader.vert  ssr_query.comp  vert.spv
